--- a/app/src/main/res/layout/activity_jogar.xml
+++ b/app/src/main/res/layout/activity_jogar.xml
@@ -88,4 +88,15 @@
         app:layout_constraintVertical_bias="0.274"
         app:srcCompat="@android:drawable/btn_star" />
 
+    <TextView
+        android:id="@+id/texto_tempo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.026"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.936" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
