--- a/app/src/main/res/layout/activity_jogar.xml
+++ b/app/src/main/res/layout/activity_jogar.xml
@@ -77,6 +77,7 @@
 
     <ImageView
         android:id="@+id/lixo_imagem"
+        android:longClickable="true"
         android:layout_width="62dp"
         android:layout_height="54dp"
         android:layout_marginTop="98dp"
