--- a/app/src/main/res/layout/activity_jogar.xml
+++ b/app/src/main/res/layout/activity_jogar.xml
@@ -100,4 +100,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.936" />
 
+    <ImageView
+        android:id="@+id/icone_pausar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onPausar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.977"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.968"
+        app:srcCompat="@android:drawable/ic_media_pause" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
