--- a/app/src/main/res/layout/activity_pausado.xml
+++ b/app/src/main/res/layout/activity_pausado.xml
@@ -7,6 +7,32 @@
     android:onClick="onPerder"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/imagem_mutado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onDesmutar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.957"
+        app:srcCompat="@android:drawable/ic_lock_silent_mode" />
+
+    <ImageView
+        android:id="@+id/imagem_volume"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onMutar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.957"
+        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
+
     <TextView
         android:id="@+id/texto_pontos"
         android:layout_width="wrap_content"
