Front das Telas Perfil e Perder + Correção da fonte no menu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:elevation="4dp"
         android:onClick="onJogar"
         android:text="Jogar"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
@@ -43,6 +44,7 @@
         android:backgroundTint="@color/primary_color"
         android:onClick="onPerfil"
         android:text="Perfil"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.674"
