--- a/app/src/main/res/layout/activity_pausado.xml
+++ b/app/src/main/res/layout/activity_pausado.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imagem_mutado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="28dp"
         android:background="@drawable/round_image_view"
         android:onClick="onDesmutar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,18 +24,18 @@
 
     <ImageView
         android:id="@+id/imagem_volume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="29dp"
         android:background="@drawable/round_image_view"
         android:onClick="onMutar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintHorizontal_bias="0.021"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.073"
-        app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
-        app:tint="@color/secundary_color"/>/>
+        app:srcCompat="@drawable/volume"
+        app:tint="@color/secundary_color" />
 
     <TextView
         android:id="@+id/texto_pontos"
