--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toTopOf="@+id/imagem_volume"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_lock_silent_mode"
-        app:tint="@color/secundary_color" />
+        app:tint="@color/white" />
 
     <ImageView
         android:id="@+id/imagem_volume"
@@ -78,9 +78,8 @@
         app:layout_constraintHorizontal_bias="0.021"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.073
-"
+        app:layout_constraintVertical_bias="0.073"
         app:srcCompat="@drawable/volume"
-        app:tint="@color/secundary_color" />
+        app:tint="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
