--- a/app/src/main/res/layout/activity_perder.xml
+++ b/app/src/main/res/layout/activity_perder.xml
@@ -30,7 +30,7 @@
         android:backgroundTint="@color/secundary_color"
         android:onClick="onPerder"
         android:text="Voltar para o menu"
-        android:textColor="@color/primary_color"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
