--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:layout_marginTop="43dp"
         android:backgroundTint="@color/primary_color"
         android:elevation="4dp"
-        android:onClick="onJogar"
+        android:onClick="onTutorial"
         android:text="Tutorial"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
