Alteracao na cor dos botoes de tutorial

--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -21,6 +21,8 @@
         android:layout_height="59dp"
         android:onClick="onRemover"
         android:text="Anterior"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/secundary_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.12"
@@ -34,6 +36,8 @@
         android:layout_height="59dp"
         android:onClick="onAdd"
         android:text="Proximo"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/secundary_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.872"
@@ -47,6 +51,8 @@
         android:layout_height="55dp"
         android:onClick="onPerder"
         android:text="Voltar para o menu"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/primary_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
