Ajustes de Tela inteira + Ajuste cor do botao em Perfil

--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -43,6 +43,7 @@
         android:backgroundTint="@color/primary_color"
         android:onClick="onPerder"
         android:text="Voltar para o menu"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.777"
