--- a/app/src/main/res/layout/activity_pausado.xml
+++ b/app/src/main/res/layout/activity_pausado.xml
@@ -104,6 +104,7 @@
         android:elevation="4dp"
         android:onClick="onDesistir"
         android:text="Desistir"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.746"
